--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -14,6 +14,9 @@
 		<variable
 			name="fragment"
 			type="id.ac.polinema.skor.fragments.ScoreFragment" />
+		<variable
+			name="gs"
+			type="id.ac.polinema.skor.models.GoalScorer" />
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
@@ -104,6 +107,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="8dp"
+			android:text="@{fragment.homeScorer}"
 			app:layout_constraintBottom_toTopOf="@+id/button_add_home"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent" />
@@ -113,6 +117,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="8dp"
+			android:text="@{fragment.awayScorer}"
 			app:layout_constraintBottom_toTopOf="@+id/button_add_away"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent" />
